# sber-traffic-listener

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  Тестовое задание XOps Python.docx
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: b93bf6722249_init_databases.py  f44a5d4363c4_test_table_init.py
src/: constants.py  crud.py  crud_base.py  database_config.py  default_responses.py  main.py  utils.py
src/traffic_listener/: constants.py  crud.py  database.py  dependencies.py  exception_schemas.py  exceptions.py  router.py  schemas.py
tests/: conftest.py  test_crud_base.py
tests/traffic_listener/: test_crud.py  test_router.py
